--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "@testing-library/user-event": "^14.5.2",
     "@tinymce/tinymce-react": "^5.1.1",
     "@yaireo/tagify": "4.17.3",
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
     "export-from-json": "^1.7.4",
     "html-react-parser": "^5.1.18",
+    "moment": "^2.30.1",
     "nouislider-react": "^3.4.2",
     "popper.js": "^1.16.1",
     "quill": "^2.0.2",
@@ -38,7 +39,8 @@
     "react-dropzone": "^14.3.5",
     "react-dual-listbox": "^6.0.3",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.53.1",
+    "react-hook-form": "^7.55.0",
+    "react-icons": "^5.5.0",
     "react-jstree-table": "^0.0.24",
     "react-modal-video": "^2.0.2",
     "react-quilljs": "^2.0.4",
@@ -51,6 +53,7 @@
     "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.6",
     "reactstrap": "^9.2.3",
+    "recharts": "^2.15.2",
     "sass": "1.56.1",
     "simplebar-react": "^3.2.6",
     "slick-carousel": "^1.8.1",
